Add lateral bar html and css

--- a/Locales/Login.html
+++ b/Locales/Login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,10 +6,9 @@
     <title>Login</title>
 </head>
 <body>
-
+-->
 <h1>PAGINA MOLONA!!!</h1>
-
-<link rel="stylesheet" href="../Locales/LoginCss.css">
+<link rel="stylesheet" href="Login.css">
 <div class="login-wrap">
     <div class="login-html">
         <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
