Add lateral bar,header and footer html and css

--- a/Locales/LateralBar.html
+++ b/Locales/LateralBar.html
@@ -1,7 +1,6 @@
 <link rel="stylesheet" href="../Locales/LateralBar.css">
 <head>
     <meta charset="utf-8" />
-    <title>SidebarMenu by Ninety-Niners.com</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -15,18 +14,18 @@
 </div>
 <div class="container">
     <input type="checkbox" class="navBtn" id="navBtn" />
-    <nav>
-        <ul>
-            <li>
+    <nav class="navigation">
+        <ul class="line">
+            <li class="line2">
                 <a href="#"><i class="fa fa-heart"></i>First Link</a>
             </li>
-            <li>
+            <li class="line2">
                 <a href="#"><i class="fa fa-medkit"></i>Second Link</a>
             </li>
-            <li>
+            <li class="line2">
                 <a href="#"><i class="fa fa-heartbeat"></i>Third Link</a>
             </li>
-            <li>
+            <li class="line2">
                 <a href="#"><i class="fa fa-ambulance"></i>Forth Link</a>
             </li>
         </ul>
