--- a/Locales/Login.html
+++ b/Locales/Login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../Locales/MainCss.css">
+    <link rel="stylesheet" href="../Locales/Main.css">
     <title>Login</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="hr"></div>
                 <div class="foot-lnk">
-                    <a href="#forgot">Forgot Password?</a>
+                    <label for="tab-2">Not Registered?</label>
                 </div>
             </div>
             <div class="sign-up-htm">
