Add lateral bar user and lateral bar admin, fixed login view

--- a/Locales/EJEMPLO.html
+++ b/Locales/EJEMPLO.html
@@ -42,7 +42,6 @@
 
         <div class="header-user-menu">
             <a href="#"><i class="fa fa-user-circle" id="logIcon"></i></a>
-            <!--<img src="../Locales/user.png" alt="User Image"/>-->
 
             <ul>
                 <li><a href="#">Settings</a></li>
@@ -70,13 +69,31 @@
                         <a href="#"><i class="fa fa-home"></i>Home</a>
                     </li>
                     <li class="line2">
-                        <a href="#"><i class="fa fa-user-plus"></i>Add User</a>
+                        <a href="#"><i class="fa fa-upload"></i>Subir Trabajo</a>
                     </li>
                     <li class="line2">
-                        <a href="#"><i class="fa fa-folder-open"></i>Generate QA</a>
+                        <a href="#"><i class="fa fa-folder-open"></i>Corregir QA</a>
                     </li>
                     <li class="line2">
-                        <a href="#"><i class="fa fa-users"></i>Generate Group</a>
+                        <a href="#"><i class="fa fa-download"></i>Gestion Entregas</a>
+                    </li>
+                    <li class="line2">
+                        <a href="#"><i class="fa fa-download"></i>Gestionar QA</a>
+                    </li>
+                    <li class="line2">
+                        <a href="#"><i class="fa fa-download"></i>Descargar QA</a>
+                    </li>
+                    <li class="line2">
+                        <a href="#"><i class="fa fa-download"></i>Descargar QA</a>
+                    </li>
+                    <li class="line2">
+                        <a href="#"><i class="fa fa-download"></i>Descargar QA</a>
+                    </li>
+                    <li class="line2">
+                        <a href="#"><i class="fa fa-download"></i>Descargar QA</a>
+                    </li>
+                    <li class="line2">
+                        <a href="#"><i class="fa fa-download"></i>Descargar QA</a>
                     </li>
                 </ul>
             </nav>
