--- a/Locales/Header.html
+++ b/Locales/Header.html
@@ -6,7 +6,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" content="footer, address, phone, icons" />
 	<link rel="stylesheet" href="../Locales/Header.css">
+	<link rel="stylesheet" href="../Locales/Main.css">
 	<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -18,16 +20,7 @@
 
 	<div class="header-limiter">
 		<h1><a href="#">QA<span>Manager</span></a></h1>
-
-		<nav>
-			<a href="#">Overview</a>
-			<a href="#">Surveys</a>
-			<a href="#">Reports</a>
-			<a href="#">Roles <span class="header-new-feature">new</span></a>
-
-
-		</nav>
-
+		
 
 		<div class="header-user-menu">
 			<a href="#"><i class="fa fa-user-circle" id="logIcon"></i></a>
@@ -41,6 +34,10 @@
 		</div>
 
 	</div>
-
 </header>
+
+<br>
+<br>
+
+
 
