Fixed login and register vars

--- a/Locales/Header.html
+++ b/Locales/Header.html
@@ -7,8 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="footer, address, phone, icons" />
+
+	<link rel="shortcut icon" href="pic.ico" />
 	<link rel="stylesheet" href="../Locales/Header.css">
 	<link rel="stylesheet" href="../Locales/Main.css">
+	<!--<link rel="text/javascript" href="Validaciones.js">-->
 	<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
