--- a/Locales/Header.html
+++ b/Locales/Header.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="footer, address, phone, icons" />
 
-	<link rel="shortcut icon" href="pic.ico" />
+	<link rel="shortcut icon" href="../Locales/pic.ico" />
 	<link rel="stylesheet" href="../Locales/Header.css">
 	<link rel="stylesheet" href="../Locales/Main.css">
 	<!--<link rel="text/javascript" href="Validaciones.js">-->
