Add to User a Search,Delete,Current,Edit and Add view

--- a/Locales/Footer.html
+++ b/Locales/Footer.html
@@ -1,8 +1,13 @@
 <link rel="stylesheet" href="../Locales/Main.css">
 <link rel="stylesheet" href="../Locales/Footer.css">
 <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+<div>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
 
 	<footer class="footer-distributed">
+
+
 
 		<div class="footer-left">
 
