--- a/Locales/User_SEARCH.html
+++ b/Locales/User_SEARCH.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<link rel="stylesheet" href="../Locales/User_ADD.css">
+<link rel="stylesheet" href="../Locales/User_SEARCH.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -8,7 +8,7 @@
     <form action="../Controllers/User_ADD_Controller.php" onsubmit="comprobarFormsVacios(this)" method="post">
 
         <div class="AddFormHeader">
-            <h1>Añadir Usuario</h1>
+            <h1>Buscar Usuario</h1>
         </div>
 
 
@@ -16,40 +16,39 @@
             <br>
             <div class="group">
                 <label for="login" class="label">Login*:</label>
-                <input id="login" name="login"  type="text" class="input" autofocus placeholder="login"
-                       onchange="comprobarAlfabetico(this,25)">
+                <input id="login" name="login"  type="text" class="input" autofocus placeholder="login">
             </div>
             <div class="group">
                 <label for="password" class="label">Password*:</label>
-                <input id="password" name="password" type="password" class="input" data-type="password" required onchange="comprobarVacio(this);comprobarAlfabetico(this,9)">
+                <input id="password" name="password" type="password" class="input" data-type="password" placeholder="password">
             </div>
             <div class="group">
                 <label for="DNI" class="label">DNI*:</label>
-                <input id="DNI" name="DNI" type="text" class="input" placeholder="87654321X" required onchange="comprobarVacio(this);comprobarAlfabetico(this,9)">
+                <input id="DNI" name="DNI" type="text" class="input" placeholder="87654321X">
             </div>
             <div class="group">
                 <label for="Correo" class="label">Email*:</label>
-                <input id="Correo" name="Correo" class="input" required onchange="comprobarVacio(this);comprobarEmail(this,9)">
+                <input id="Correo" name="Correo" class="input" placeholder="example@host.com">
             </div>
             <div class="group">
                 <label for="Nombre" class="label">Nombre*:</label>
-                <input id="Nombre" name="Nombre" class="input" required onchange="comprobarVacio(this);comprobarAlfabetico(this,9)">
+                <input id="Nombre" name="Nombre" class="input" required placeholder="Random">
             </div>
             <div class="group">
                 <label for="Apellidos" class="label">Apellidos*:</label>
-                <input id="Apellidos" name="Apellidos" class="input" required onchange="comprobarVacio(this);comprobarAlfabetico(this,9)">
+                <input id="Apellidos" name="Apellidos" class="input" placeholder="Random">
             </div>
             <div class="group">
                 <label for="Telefono" class="label">Telefono*:</label>
-                <input id="Telefono" name="Telefono" class="input" required onchange="comprobarVacio(this);comprobarAlfabetico(this,9)">
+                <input id="Telefono" name="Telefono" class="input" placeholder="666666666">
             </div>
             <div class="group">
                 <label for="Direccion" class="label">Direccion*:</label>
-                <input id="Direccion" name="Correo" class="input" required onchange="comprobarVacio(this);comprobarAlfabetico(this,9)">
+                <input id="Direccion" name="Direccion" class="input" placeholder="C/calle 1 Ourense,Ourense">
             </div>
 
             <div class="group">
-                <input id="send" type="submit" class="button" value="Sign In" onclick="comprobarVacio(this)">
+                <input id="send" type="submit" class="button" value="Buscar">
             </div>
             <div class="group">
                 <a href="../Controllers/User_SHOWALL_Controller.php"><i class="fa fa-undo" id="returnIcon"></i></a>
