Fixed js in header.html

--- a/Locales/Header.html
+++ b/Locales/Header.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="../Locales/Header.css">
 	<link rel="stylesheet" href="../Locales/Main.css">
 	<!--<link rel="text/javascript" href="Validaciones.js">-->
+	<script type="text/javascript" src="../Locales/Validaciones.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
