Add User Show groups and fixed button user add

--- a/Locales/Header.html
+++ b/Locales/Header.html
@@ -23,7 +23,7 @@
 <header class="header-user-dropdown">
 
 	<div class="header-limiter">
-		<h1><a href="#">QA<span>Manager</span></a></h1>
+		<h1><a href="../Controllers/Index_Controller.php">QA<span>Manager</span></a></h1>
 		
 
 		<div class="header-user-menu">
