Add Action,History and Function views

--- a/Locales/Function_SEARCH.html
+++ b/Locales/Function_SEARCH.html
@@ -5,7 +5,7 @@
 
 <div class="CurrentFormContainer">
 
-    <form action="../Controllers/Function_SEARCH_Controller.php" onsubmit="comprobarFormsVacios(this)" method="post">
+    <form action="../Controllers/Function_SEARCH_Controller.php" method="post">
 
         <div class="AddFormHeader">
             <h1>Buscar Funcionalidad</h1>
