--- a/Locales/Footer.html
+++ b/Locales/Footer.html
@@ -14,7 +14,7 @@
 			<h3>QA<span>Manager</span></h3>
 
 			<p class="footer-links">
-				<a href="#">Home</a>
+				<a href="../Controllers/Index_Controller.php">Home</a>
 				·
 				<a href="#">Blog</a>
 				·
@@ -27,31 +27,31 @@
 				<a href="#">Contact</a>
 			</p>
 
-			<p class="footer-company-name">SQLINJECTION &copy; 2017</p>
+			<p class="footer-company-name" id="string">SQLINJECTION &copy; 2017</p>
 		</div>
 
 		<div class="footer-center">
 
 			<div>
 				<i class="fa fa-map-marker"></i>
-				<p><span>Campus de Ourense - Edificio Politécnico - 32004</span> Ourense, España</p>
+				<p id="string"><span>Campus de Ourense - Edificio Politécnico - 32004</span> Ourense, España</p>
 			</div>
 
 			<div>
 				<i class="fa fa-phone"></i>
-				<p>+34 666 123456</p>
+				<p id="string">+34 666 123456</p>
 			</div>
 
 			<div>
 				<i class="fa fa-envelope"></i>
-				<p><a href="mailto:support@company.com">support@esei.com</a></p>
+				<p id="string"><a href="mailto:support@company.com">support@esei.com</a></p>
 			</div>
 
 		</div>
 
 		<div class="footer-right">
 
-			<p class="footer-company-about">
+			<p class="footer-company-about" id="string">
 				<span>About the company</span>
 				Proyecto de IU para la gestion de QA.
 			</p>
