--- a/Locales/User_SEARCH.html
+++ b/Locales/User_SEARCH.html
@@ -3,24 +3,21 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-<div class="CurrentFormContainer">
+<div class="SearchFormContainer">
 
-    <form action="../Controllers/User_SEARCH_Controller.php" onsubmit="comprobarFormsVacios(this)" method="post">
+    <form action="../Controllers/User_SEARCH_Controller.php" method="post">
 
-        <div class="AddFormHeader">
+        <div class="SearchFormHeader">
             <h1>Buscar Usuario</h1>
         </div>
-
-
-        <div class="CurrentForm1">
+        <div class="SearchForm1">
             <br>
             <div class="group">
                 <label for="login" class="label">Login*:</label>
                 <input id="login" name="login"  type="text" class="input" autofocus placeholder="login">
             </div>
             <div class="group">
-                <label for="password" class="label">Password*:</label>
-                <input id="password" name="password" type="password" class="input" data-type="password" placeholder="password">
+                <input id="password" name="password" type="hidden" class="input" data-type="password" placeholder="password">
             </div>
             <div class="group">
                 <label for="DNI" class="label">DNI*:</label>
@@ -32,7 +29,7 @@
             </div>
             <div class="group">
                 <label for="Nombre" class="label">Nombre*:</label>
-                <input id="Nombre" name="Nombre" class="input" required placeholder="Random">
+                <input id="Nombre" name="Nombre" class="input" placeholder="Random">
             </div>
             <div class="group">
                 <label for="Apellidos" class="label">Apellidos*:</label>
@@ -51,7 +48,7 @@
                 <input id="send" type="submit" class="button" value="Buscar">
             </div>
             <div class="group">
-                <a href="../Controllers/User_SHOWALL_Controller.php"><i class="fa fa-undo" id="returnIcon"></i></a>
+                <a href="../Controllers/User_SHOWALL_Controller.php"><i class="fa fa-arrow-circle-left" id="returnIcon"></i></a>
             </div>
         </div>
 
